# Social-hub-feed-service

./: Dockerfile  README.md  docker-compose.yml  import_dummy_data.py  pyproject.toml  requirements.txt  setup.cfg  validators.py
accounts/: managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_auth_code.py  0002_user_auth_code.py
asset/: dummy_hash.csv  dummy_posts.csv
config/: root_urls.py  settings.py
load_data/: dummy_data.csv  load_data.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
